# simple_world_js

./: .babelrc  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  WorldJS.js  cmake_install.cmake  package.json  pyproject.toml
lib/mgc2sp/: SPTK.h  _c2sp.c  _fft.c  _fftr.c  _freqt.c  _gc2gc.c  _gnorm.c  _ignorm.c  _mgc2mgc.c  _mgc2sp.c  fileio.c  makefile  mgc2sp.c
lib/mgc2sp/test/: sample.mgc  sopr  x2x
options/: post.js
src/: WorldJS.cpp  memoryUtil.h
src/FeatureConverter/: FeatureConverter.cpp  FeatureConverter.h
src/WorldWrapper/: WorldWrapper.cpp  WorldWrapper.h
src/hello/: hello.cpp  hello.h
test/javascript/js/: wasm-audio-helper.js  worldjs.spec.js
test/python/: create_parameter_json.py
